# webrtc-example

./: README.md
app/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
app/scripts/: build.py
app/src/: Application.cpp  Application.h  AudioDevice.cpp  AudioDevice.h  AudioReceiver.cpp  AudioReceiver.h  AudioSource.cpp  AudioSource.h  FrameTransformer.cpp  FrameTransformer.h  SessionDescriptionObserver.cpp  SessionDescriptionObserver.h  VideoReceiver.cpp  VideoReceiver.h  VideoTrackSource.cpp  VideoTrackSource.h  WebSocketClient.cpp  WebSocketClient.h  main.cpp  pch.h
client/: index.js  package-lock.json  package.json
client/public/: index.html  style.css
server/: index.js  package-lock.json  package.json
